--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,31 +3,128 @@
   --color-secondary: #6592e6;
   --font: "Jost", sans-serif;
 }
-
 html {
   font-size: 62.5%;
 }
-
+body {
+  height: 200vh;
+}
 .front {
   background: radial-gradient(white, #fad7e9, #decdfa);
-  height: 100vh;
-  padding-left: 5rem;
+  padding: 0;
   padding-right: 5rem;
-  padding-top: 1rem;
+  padding-left: 5rem;
+  padding-top: 1.5rem;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
-  width: 6.5rem;
-  height: 6.5rem;
+  width: 6rem;
+  height: 6rem;
+  padding-right: 1rem;
+  position: fixed;
 }
 
-.brand-text {
-  font-size: 2rem;
-  margin-left: 1rem;
-  font-weight: 700;
+.link {
+  color: #fff;
+  text-decoration: none;
   font-family: var(--font);
+  font-weight: 700;
+  font-size: 2rem;
 }
 
-.banner {
+.brand-link {
+  font-size: 2rem;
+  color: black;
+}
+
+.brand-logo {
   display: flex;
+  align-items: center;
+}
+
+.brand-name {
+  padding-left: 6.9rem;
+  position: fixed;
+}
+.flag {
+  width: 5rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+  filter: saturate(130%);
+  margin-right: 2rem;
+}
+
+.language-btn {
+  display: flex;
+  align-items: center;
+}
+
+.btn-layout {
+  border: 0;
+  border-radius: 0.4rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  box-shadow: 0 2px 2px lightslategray;
+  font-weight: 700;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+}
+
+.btn-secondary {
+  background: var(--color-secondary);
+}
+
+.link-sale {
+  color: #fff;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.main-heading {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+
+.heading-theme {
+  font-family: var(--font);
+  font-weight: 700;
+  color: var(--color-secondary);
+  font-size: 2.9rem;
+  margin-bottom: 2rem;
+}
+
+.theme-desc {
+  display: flex;
+  justify-content: center;
+}
+
+.desc {
+  font-family: var(--font);
+  font-size: 8rem;
+  text-align: center;
+  margin-right: 10rem;
+  margin-left: 10rem;
+  margin-top: 0;
+}
+
+.downloads {
+  display: flex;
+  justify-content: center;
+}
+
+.windows {
+  margin-right: 2rem;
+}
+
+.btn-layout .link {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
