--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,18 +17,6 @@ body {
   padding-top: 1.5rem;
 }
 
-.nav-bar {
-  display: flex;
-  justify-content: space-between;
-}
-
-.logo {
-  width: 6rem;
-  height: 6rem;
-  padding-right: 1rem;
-  position: fixed;
-}
-
 .link {
   color: #fff;
   text-decoration: none;
@@ -42,26 +30,30 @@ body {
   color: black;
 }
 
-.brand-logo {
-  display: flex;
-  align-items: center;
+.bar {
+  width: 95%;
+  position: fixed;
+  z-index: 200;
 }
 
-.brand-name {
-  padding-left: 6.9rem;
-  position: fixed;
+.relative {
+  position: relative;
 }
+
+.logo {
+  width: 6rem;
+  height: 6rem;
+}
+
 .flag {
   width: 5rem;
   height: 3rem;
   border-radius: 0.5rem;
   filter: saturate(130%);
-  margin-right: 2rem;
 }
 
-.language-btn {
-  display: flex;
-  align-items: center;
+.right-align {
+  float: right;
 }
 
 .btn-layout {
